--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-counter></app-counter>
-<app-cat-list></app-cat-list>
+<!-- <app-counter></app-counter> -->
+<!-- <app-cat-list></app-cat-list> -->
+<app-breed></app-breed>
 <router-outlet></router-outlet>
