--- a/src/app/cat/cat.component.html
+++ b/src/app/cat/cat.component.html
@@ -1,1 +1,1 @@
-<img [src]='cat.url' alt='{{cat.id}}' height='{{cat.height}}' width='{{cat.width}}' />
+<!-- <img [src]='cat.url' alt='{{cat.id}}' height='{{cat.height}}' width='{{cat.width}}' /> -->
