Allow search of cat image per breed
Signed-off-by: soyuka <soyuka@users.noreply.github.com>

--- a/src/app/breed-list/breed-list.component.html
+++ b/src/app/breed-list/breed-list.component.html
@@ -1,3 +1,8 @@
 <ul *ngFor="let breed of breeds">
-  <li>{{breed.name}}</li>
+    <li>
+        {{ breed.name }}
+        <button (click)="searchCatWithBreedClicked(breed)">
+            Show cats of this breed
+        </button>
+    </li>
 </ul>
